# Karu

./: CNAME  README.md  index.html  malha_AL.ipynb  pyproject.toml
pages/: login.html  logs.html  manager-dashboard.html  new-manager.html  new-professional.html  new-routine-consultation.html  newborn-history.html  newborn-registration.html  search-rn.html  signup.html  user-flow.html  user-management.html
