[project]
name = "karu"
version = "0.1.0"
description = ""
authors = [
    {name = "edeilson azevedo",email = "edeilsonazevedo22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "mapclassify (<2.10)",
    "folium (>=0.20.0,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
